# flowtracer

./: .gitignore  Cargo.toml  ROADMAP_PHASE1.md  SPEC.md  context.md  flowtracer
benches/: gen_fixture.sh
examples/: gen_fixture.rs
src/: cli.rs  lib.rs  main.rs
src/classifier/: error.rs  mod.rs  patterns.rs
src/grouper/: by_id.rs  by_time.rs  mod.rs
src/input/: file.rs  mod.rs  stdin.rs
src/model/: error.rs  event.rs  mod.rs  span.rs  trace.rs
src/parser/: mod.rs  plain.rs
src/renderer/: colors.rs  mod.rs  tree.rs
src/renderer/snapshots/: flowtracer__renderer__tree__tests__snapshot_trace_multiple_errors.snap  flowtracer__renderer__tree__tests__snapshot_trace_no_errors.snap  flowtracer__renderer__tree__tests__snapshot_trace_with_error.snap
src/trace_builder/: mod.rs  stack.rs
tests/: classifier_tests.rs  integration_tests.rs  parser_tests.rs
tests/fixtures/: error_propagation.txt  multi_request.txt  no_request_id.txt  plain_logs.txt
tests/snapshots/: integration_tests__snapshot_error_propagation_full_output.snap  integration_tests__snapshot_multi_request_full_output.snap  integration_tests__snapshot_plain_logs_full_output.snap
