[package]
name = "flowtracer"
version = "0.1.0"
edition = "2021"
description = "Reconstruct and visualize execution traces from application logs"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
pretty_assertions = "1"
insta = "1"
tempfile = "3"
